--- a/provision/roles/docker-registry/templates/publisher.service.j2
+++ b/provision/roles/docker-registry/templates/publisher.service.j2
@@ -2,6 +2,6 @@
 Description=Minios S3 to CernVM-FS publisher service
 
 [Service]
-ExecStart={{ workdir }}/bin/publisher
+ExecStart={{ workdir }}/bin/publisher {{ workdir }}/minio_config/publisher.json
 StandardOutput=journal
 StandardError=journal
